--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -1,35 +1,18 @@
-name: MinIO Deployment
+name: Conditional env variable
 
-on:
-  push:
-    branches:
-      - mdmn-cluster
+on: workflow_dispatch
 
 env:
-  MODE: destroy
+  DAY_OF_WEEK: Monday
 
 jobs:
-  deploy:
+  greeting_job:
     runs-on: ubuntu-latest
-    if: ${{ env.MODE == 'apply' }}
     env:
-      AWS_DEFAULT_REGION: "us-west-2"
+      Greeting: Hello
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          ref: ubuntu
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 1.1.7
-
-      - name: Configure AWS credentials
+      - name: "Say Hello Mona it's Monday"
+        if: ${{ env.DAY_OF_WEEK == 'Monday' }}
+        run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-          aws configure set region $AWS_DEFAULT_REGION
+          First_Name: Mona
