--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -1,6 +1,9 @@
-name: Conditional env variable
+name: MinIO Deployment
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - mdmn-cluster
 
 env:
   DAY_OF_WEEK: Monday
