--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -9,7 +9,7 @@ on:
       mode:
         description: 'Conditional Execution'
         required: true
-        default: apply
+        default: "apply"
         type: choice
         options:
           - apply
