--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -6,26 +6,33 @@ on:
       - mdmn-cluster
   workflow_dispatch:
     inputs:
-      mode:
-        description: 'Conditional Execution'
+      logLevel:
+        description: 'Log level'
         required: true
-        default: "apply"
+        default: 'warning'
         type: choice
         options:
-          - apply
-          - destroy
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 jobs:
-  deploy:
+  log-the-inputs:
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.mode == 'apply' }}
     steps:
-      - name: Say Apply
-        run: echo "MODE == apply"
-  checker:
-    runs-on: ubuntu-latest
-    env:
-      MYVAR: ${{ github.event.inputs.mode }}
-    steps:
-      - name: echo MYVAR
-        run: echo "$MYVAR"
+      - run: |
+          echo "Log level: $LEVEL"
+          echo "Tags: $TAGS"
+          echo "Environment: $ENVIRONMENT"
+        env:
+          LEVEL: ${{ inputs.logLevel }}
+          TAGS: ${{ inputs.tags }}
+          ENVIRONMENT: ${{ inputs.environment }}
