--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -6,33 +6,16 @@ on:
       - mdmn-cluster
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
+      destroy:
+        description: 'Destroy project'
         required: true
-        default: 'warning'
-        type: choice
-        options:
-        - info
-        - warning
-        - debug
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
+        default: false
+        type: boolean    
 
 jobs:
-  log-the-inputs:
+  deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' || github.event.inputs.destroy == 'false' }}
     steps:
-      - run: |
-          echo "Log level: $LEVEL"
-          echo "Tags: $TAGS"
-          echo "Environment: $ENVIRONMENT"
-        env:
-          LEVEL: ${{ inputs.logLevel }}
-          TAGS: ${{ inputs.tags }}
-          ENVIRONMENT: ${{ inputs.environment }}
+      - name: Say Apply
+        run: echo "DESTROY == false"
