--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -21,7 +21,7 @@ jobs:
         run: echo "DESTROY == false"
   destroy:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' || github.event.inputs.destroy == 'false' }}
+    if: ${{ github.event_name == 'push' || github.event.inputs.destroy == 'true' }}
     steps:
       - name: Say Apply
         run: echo "DESTROY == true"
