--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -2,15 +2,23 @@ name: Conditional Workflow
 
 on: [push]
 
-env:
-  RUN_JOB: true
-
 jobs:
+  set-condition:
+    runs-on: ubuntu-latest
+    outputs:
+      run-job: ${{ steps.set-output.outputs.RUN_JOB }}
+    steps:
+      - name: Set condition
+        id: set-output
+        run: |
+          echo "::set-output name=RUN_JOB::true"  # or some conditional logic here
+
   build:
-    if: env.RUN_JOB == 'true'
+    needs: set-condition
+    if: needs.set-condition.outputs.run-job == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run a script
-        run: echo "Running the build job because RUN_JOB is true"
+        run: echo "Running the build job because condition is met"
