--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -3,15 +3,31 @@ name: Conditional Workflow
 on: [push]
 
 jobs:
-  build:
+  set-condition:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - condition: true
-    if: matrix.condition == true
+    outputs:
+      run-job: ${{ steps.set-output.outputs.RUN_JOB }}
+    steps:
+      - name: Set condition
+        id: set-output
+        run: |
+          echo "::set-output name=RUN_JOB::true"  # or some conditional logic here
+
+  build:
+    needs: set-condition
+    if: needs.set-condition.outputs.run-job == 'true'
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run a script
-        run: echo "Running the build job because matrix condition is true"
+        run: echo "Running the build job because condition is met"
+  destroy:
+    needs: set-condition
+    if: needs.set-condition.outputs.run-job == 'false'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run a script
+        run: echo "Running the build job because condition is met"
