--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Set condition
         id: set-output
         run: |
-          echo "::set-output name=RUN_JOB::${destroy}"  # or some conditional logic here
+          echo "RUN_JOB=${{ env.destroy }}" >> $GITHUB_OUTPUT
 
   build:
     needs: set-condition
@@ -33,4 +33,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run a script
-        run: echo "Running the build job because condition is met"
+        run: echo "Running the DESTROY job because condition is met"
