--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -1,6 +1,9 @@
-name: Conditional Workflow
+name: MinIO Deployment
 
-on: [push]
+on:
+  push:
+    branches:
+      - mdmn-cluster
 
 env:
   destroy: true
@@ -20,11 +23,26 @@ jobs:
     needs: set-condition
     if: needs.set-condition.outputs.run-job == 'false'
     runs-on: ubuntu-latest
+    env:
+      AWS_DEFAULT_REGION: "us-west-2"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Run a script
-        run: echo "Running the build job because condition is met"
+        with:
+          ref: ubuntu # Define the branch you wish to use
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.1.7
+      - name: Configure AWS credentials
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+          aws configure set region $AWS_DEFAULT_REGION
+
   destroy:
     needs: set-condition
     if: needs.set-condition.outputs.run-job == 'true'
