--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -6,7 +6,7 @@ on:
       - mdmn-cluster
 
 env:
-  destroy: true
+  destroy: false
 
 jobs:
   set-condition:
@@ -26,22 +26,8 @@ jobs:
     env:
       AWS_DEFAULT_REGION: "us-west-2"
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          ref: ubuntu # Define the branch you wish to use
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 1.1.7
-      - name: Configure AWS credentials
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-          aws configure set region $AWS_DEFAULT_REGION
+      - name: Python version check
+        run: python --version
 
   destroy:
     needs: set-condition
