--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -60,19 +60,36 @@ jobs:
         run: terraform init
       - name: Export SSH Key
         run: echo "TF_VAR_sshkey=${{ secrets.SSHKEY }}" >> $GITHUB_ENV
-      # 2.) STATE_EXISTS is false, so we need to create a new Terraform State File
-      - name: Apply Terraform
+      # 2.) STATE_EXISTS is false, so we need to create a new Terraform State File & save it as a GitHub Secret
+      - name: Apply New Terraform
         if: ${{ env.STATE_EXISTS == 'false' }}
         working-directory: ./terraform
         run: terraform apply -auto-approve
-      - name: Create GitHub Secret
+      - name: Save State File As Secret
+        if: ${{ env.STATE_EXISTS == 'false' }}
         uses: gliech/create-github-secret-action@v1
         with:
           name: TF_STATE_FILE
           value: terraform/terraform.tfstate
           pa_token: ${{ secrets.PA_TOKEN }}
-
-      # 3.) STATE_EXISTS is true, so we need to import Terraform State File
+      # 3.) STATE_EXISTS is true, so we need to use the State File
+      - name: Use Terraform State File
+        if: ${{ env.STATE_EXISTS == 'true' }}
+        run: echo "TF_STATE_FILE=${{ secrets.TF_STATE_FILE }}" >> $GITHUB_ENV
+      - name: Write TF_STATE_FILE to file
+        if: ${{ env.STATE_EXISTS == 'true' }}
+        run: echo "${{ secrets.TF_STATE_FILE }}" > terraform/terraform.tfstate
+      - name: Apply Existing Terraform
+        if: ${{ env.STATE_EXISTS == 'true' }}
+        working-directory: ./terraform
+        run: terraform apply -auto-approve
+      - name: Update State File Secret
+        if: ${{ env.STATE_EXISTS == 'true' }}
+        uses: gliech/create-github-secret-action@v1
+        with:
+          name: TF_STATE_FILE
+          value: terraform/terraform.tfstate
+          pa_token: ${{ secrets.PA_TOKEN }}
 
   destroy:
     needs: set-condition
