--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -78,7 +78,13 @@ jobs:
         run: echo "TF_STATE_FILE=${{ secrets.TF_STATE_FILE }}" >> $GITHUB_ENV
       - name: Write TF_STATE_FILE to file
         if: ${{ env.STATE_EXISTS == 'true' }}
-        run: echo "${{ secrets.DEBUG_TF_STATE_FILE }}" > terraform/terraform.tfstate.txt && cat terraform/terraform.tfstate.txt
+        run: echo "${{ secrets.DEBUG_TF_STATE_FILE }}" > terraform/terraform.tfstate
+      - name: Upload Terraform State File
+        if: ${{ env.STATE_EXISTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: terraform-tfstate
+          path: terraform/terraform.tfstate
       - name: Apply Existing Terraform
         if: ${{ env.STATE_EXISTS == 'true' }}
         working-directory: ./terraform
