--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -116,19 +116,22 @@ jobs:
         with:
           ref: ubuntu #<- Define the branch you wish to use.
 
-      - name: Create variable 'TF_CONTENT' 
-        id: get_tf_content
-        run: echo "::set-output name=tf_content::$(cat terraform/ec2.tf)"
+      - name: Read TF State File
+        id: read_tf_state
+        run: |
+          content=$(cat terraform/ec2.tf)
+          echo "tf_state_content=$content" >> $GITHUB_ENV
+          echo "tf_state_content=$content" >> $GITHUB_OUTPUT
         
-      - name: Save State File As Secret
+      - name: Update State File Secret
         uses: gliech/create-github-secret-action@v1
         with:
-          name: TF_STATE_FILE2
-          value: ${{ steps.get_tf_content.outputs.tf_content }}
+          name: TF_STATE_FILE
+          value: ${{ env.tf_state_content }}
           pa_token: ${{ secrets.PA_TOKEN }}
       
       - name: Write TF_STATE_FILE to file
-        run: echo -e "${{ steps.get_tf_content.outputs.tf_content }}" > ./example.txt
+        run: echo -e "${{ env.tf_state_content }}" > ./example.txt
         
       - name: Check Size
         run: ls -lah ./example.txt
