--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -113,25 +113,18 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ubuntu #<- Define the branch you wish to use.
-
-      - name: Create variable 'TF_CONTENT' 
-        id: get_tf_content
-        run: echo "::set-output name=tf_content::$(cat terraform/ec2.tf)"
         
-      - name: Save State File As Secret
-        uses: gliech/create-github-secret-action@v1
-        with:
-          name: TF_STATE_FILE2
-          value: ${{ steps.get_tf_content.outputs.tf_content }}
-          pa_token: ${{ secrets.PA_TOKEN }}
+      - name: Set the value in bash
+        id: read_tf_file
+        run: |
+          {
+            echo 'JSON_RESPONSE<<EOF'
+            cat terraform/ec2.tf
+            echo EOF
+          } >> "$GITHUB_ENV"
       
       - name: Write TF_STATE_FILE to file
-        uses: mobiledevops/secret-to-file-action@v1
-        with:
-          base64-encoded-secret: ${{ steps.get_tf_content.outputs.tf_content }}
-          filename: "./example.txt"
-          is-executable: false
-      - run: echo -e "${{ steps.get_tf_content.outputs.tf_content }}" > ./example.txt
+        run: echo -e "${{ env.tf_state_content }}" > ./example.txt
         
       - name: Check Size
         run: ls -lah ./example.txt
