--- a/.github/workflows/minio-mdmn-cluster.yaml
+++ b/.github/workflows/minio-mdmn-cluster.yaml
@@ -104,6 +104,15 @@ jobs:
             echo "STATE_EXISTS=true" >> $GITHUB_ENV
           fi
 
+      - name: Configure AWS credentials
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+          aws configure set region $AWS_DEFAULT_REGION
+          
       - name: Checkout code
         if: ${{ env.STATE_EXISTS == 'true' }}
         uses: actions/checkout@v2
@@ -137,7 +146,7 @@ jobs:
         working-directory: ./terraform
         run: terraform destroy -auto-approve -lock=false
 
-      - name: Apply New Terraform
+      - name: TF State Count
         if: ${{ env.STATE_EXISTS == 'true' }}
         working-directory: ./terraform
         run: terraform state list | wc -l
